# zlmdb

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yaml  .travis-deploy.sh  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPERS.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  build_cffi_lmdb.py  build_lmdb.py  deploy.sh  hatch_build.py  justfile  mypy.ini  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements-rtd.txt  requirements-test.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  yapf.ini
.audit/: jameshilliard_flatc_override.md  oberstet_fix_113.md  oberstet_fix_116.md  oberstet_fix_122.md  oberstet_fix_124.md  oberstet_fix_126.md  oberstet_fix_130.md  oberstet_fix_136.md  oberstet_modernization-phase-11.md  oberstet_modernization-phase-12.md  oberstet_modernization-phase-13.md  oberstet_modernization-phase-14.md  oberstet_rel-25-12-3.md  oberstet_sync-autobahn-zlmdb.md  oberstet_vendored-flatbuffers-improvements-new.md  oberstet_vendored-flatbuffers-improvements.md
.github/: ISSUE_TEMPLATE.md
.github/scripts/: build-arm64-wheel.sh
.github/templates/: discussion-post.md.j2
.github/workflows/: README.md  deploy.yml  main.yml  release-post-comment.yml  release.yml  wheels-arm64.yml  wheels-docker.yml  wheels.yml
_work/demo/: Date.py
_work/demo/accelstorage/: NoSuchSeries.py
docs/: Makefile  changelog.rst  conf.py  contents.rst  contributing.rst  gen.py  getting-started.rst  index.rst  installation.rst  intro.rst  make.bat  modules.rst  overview.rst  performance.rst  reference.rst  releases.rst  usage.rst  zlmdb.rst
docs/_static/: .~lock.performance_test1.ods#  performance_test1.ods  zlmdb_dbformat.ods
docs/flatbuffers/: index.rst  vendoring-design-and-technology.rst  wamp-zerocopy-dataplane.rst
docs/lmdb/: api-reference.rst  cursors.rst  examples.rst  index.rst  performance.rst  quickstart.rst  transactions.rst
docs/orm/: api-reference.rst  best-practices.rst  examples.rst  index.rst  indexes.rst  performance.rst  quickstart.rst  schema-design.rst  serialization.rst  time-series.rst
docs/programming-guide/: index.rst
examples/lmdb/: dirtybench-gdbm.py  dirtybench.py  nastybench.py  parabench.py
flatbuffers/: compat.py
lmdb/: __init__.py  _config.py  cffi.py
scripts/: smoke_test.py  test_reflection.py
src/zlmdb/: __init__.py  _meta.py  _pmap.py  _transaction.py  _types.py  _version.py
src/zlmdb/_flatbuffers_vendor/: __init__.py  _git_version.py  table.py
src/zlmdb/_flatbuffers_vendor/reflection/: Object.py  RPCCall.py  Service.py  Type.py
src/zlmdb/_flatc/: __init__.py
src/zlmdb/_lmdb_vendor/: __init__.py  __main__.py  _config.py  cffi.py  tool.py
src/zlmdb/flatbuffers/: __init__.py  builder.py  compat.py  encode.py  flexbuffers.py  number_types.py  util.py
src/zlmdb/flatbuffers/reflection/: Enum.py  EnumVal.py  Field.py  Object.py  RPCCall.py  Schema.py  SchemaFile.py  Service.py
src/zlmdb/tests/: conftest.py  test_flatbuffers_version.py
src/zlmdb/tests/lmdb/: aio_test.py  crash_test.py  cursor_test.py  cve_test.py  env_test.py  getmulti_test.py  iteration_test.py  package_test.py  test_lmdb.py  testlib.py  tool_test.py  txn_test.py
src/zlmdb/tests/orm/: MNodeLog.py  _schema_mnode_log.py  _schema_py3.py  test_pmap_indexes.py  test_pmap_types.py  test_pmaps.py  test_select.py
tests/: Makefile  test_cbor.py  test_etcd.py  test_fbs_reflection.py  test_flatbuffer.py  test_flatbuffers.py  test_new.py  test_ops.py  test_zlmdb.py  user.fbs  user_typed.py
tests/_gen/crossbarfx/: Tag.py
tests/zdb/: _schema_fbs.py  test_zdb.py  test_zdb_df.py  test_zdb_dyn.py  test_zdb_etcd.py  test_zdb_fbs.py  zdb.yml
work/: test_pickle.py  user.py
work/_gen/crossbarfx/: Date.py  Rating.py  User.py
work/zdb/: README.md  _schema_fbs.py  test_zdb_df.py  test_zdb_dyn.py  test_zdb_etcd.py  zdb.yml
zlmdb/: __init__.py  _database.py  _errors.py  _meta.py  _pmap.py  _schema.py  _transaction.py  _types.py  _version.py  cli.py  pmap.py  zlmdb.py
zlmdb/flatbuffer/: demo.fbs
zlmdb/flatbuffer/demo/: Rating.py  Tag.py  __init__.py
zlmdb/flatbuffer/reflection/: Field.py  Object.py  RPCCall.py  Schema.py
zlmdb/flatbuffers/: reflection.bfbs  reflection.fbs
zlmdb/flatbuffers/demo/: User.py
zlmdb/flatbuffers/demo/accelstorage/: AccelBatch.py  AccelSeries.py  TimeRange.py
zlmdb/flatbuffers/demo/survey/: Gender.py  IceCreamOfTheDaySurvey.py  Moo.py
zlmdb/flatbuffers/reflection/: AdvancedFeatures.py  BaseType.py  Enum.py  EnumVal.py  Field.py  KeyValue.py  Object.py  RPCCall.py  Schema.py  SchemaFile.py  Service.py  Type.py
zlmdb/lmdb/: __init__.py  __main__.py  cffi.py  tool.py
zlmdb/tests/: MNodeLog.py  _schema_fbs.py  _schema_mnode_log.py  _schema_py2.py  _schema_py3.py  _test_flatbuffers.py  _test_serialization.py  demo2.fbs  test_basic.py  test_etcd.py  test_flatbuffers.py  test_lmdb.py  test_lmdb_address_book.py  test_maps.py  test_pmap_indexes.py  test_pmap_types.py  test_pmaps.py  test_select.py  test_serialization.py  user.py  user_fbs.py  user_py2.py  user_py3.py  user_typed.py  zlmdb.fbs
zlmdb/tests/demo/accelstorage/: AccelSample.py  AccelSeriesRejected.py
zlmdb/tests/demo/survey/: IceCreamOfTheDayReply.py
zlmdb/tests/lmdb/: crash_test.py  cursor_test.py  env_test.py  getmulti_test.py  iteration_test.py  package_test.py  testlib.py  tool_test.py  txn_test.py
zlmdb/tests/lmdb/examples/: address-book.py  dirtybench-gdbm.py  dirtybench.py  nastybench.py  parabench.py  test_lmdb_address_book.py
zlmdb/tests/orm/: _schema_fbs.py  _schema_py2.py  _test_flatbuffers.py  _test_serialization.py  test_basic.py  test_etcd.py  test_pmap_types.py  test_pmaps.py  test_select.py
